# python-plugin

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/designer_plugin/: __init__.py  api.py  designer_plugin.py  logger.py  models.py
src/designer_plugin/d3sdk/: __init__.py  ast_utils.py  client.py  function.py  session.py
test/: __init__.py  test_ast_utils.py  test_core.py  test_plugin.py
tests/: __init__.py  test_ast_utils.py  test_client.py  test_core.py  test_plugin.py
