[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "disguise-designer-plugin"
version = "1.1.0"
description = "A plugin for the Disguise Designer application."
authors = [
    { name = "Tom Whittock", email = "tom.whittock@disguise.one" }
]
dependencies = [
    "zeroconf>=0.39.0"
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/disguise-one/python-plugin"
Issues = "https://github.com/disguise-one/python-plugin/issues"
