[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "disguise-designer-plugin"
version = "1.1.0"
description = "A plugin for the Disguise Designer application."
authors = [
    { name = "Tom Whittock", email = "tom.whittock@disguise.one" },
    { name = "Taegyun Ha", email = "taegyun.ha@disguise.one" }
]
dependencies = [
    "aiohttp>=3.13.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "zeroconf>=0.39.0",
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README.md"

[tool.setuptools.package-data]
designer_plugin = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/disguise-one/python-plugin"
Issues = "https://github.com/disguise-one/python-plugin/issues"

# Package development
[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.ruff]
target-version = "py311"
exclude = [
    "tests",
    ".venv",
    ".devcontainer",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src"]
exclude = [
    ".venv/",
    ".devcontainer/",
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "zeroconf.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
